<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2020 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for selecting a pickup date -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.PickupFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.cupcake.model.OrderViewModel" />

        <variable
            name="pickupFragment"
            type="com.example.cupcake.ui.PickupFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_pickup_option_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pickup_options"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rg_pickup_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/divider1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_pickup_option_type">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/half_margin_between_elements"
                    android:layout_marginEnd="@dimen/radio_button_padding"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_store" />

                <RadioButton
                    android:id="@+id/rb_in_store_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/half_margin_between_elements"
                    android:checked="@{viewModel.pickupOption.equals(1)}"
                    android:onClick="@{() -> viewModel.setPickupOption(1)}"
                    android:text="@string/pickup_option_in_store"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/radio_button_padding"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_delivery_dining" />

                <RadioButton
                    android:id="@+id/delivery_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.pickupOption.equals(2)}"
                    android:onClick="@{() -> viewModel.setPickupOption(2)}"
                    android:text="@string/pickup_option_delivery"
                    android:textAppearance="?attr/textAppearanceBody2" />

            </RadioGroup>

            <View
                android:id="@+id/divider1"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_pickup_option" />

            <!-- Address fields -->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/address_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider1">

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="@dimen/ic_location_dimens"
                    android:layout_height="@dimen/ic_location_dimens"
                    android:layout_marginStart="@dimen/half_margin_between_elements"
                    android:layout_marginEnd="@dimen/margin_between_elements"
                    android:src="@drawable/ic_location_on_24"
                    app:layout_constraintBottom_toBottomOf="@id/til_address"
                    app:layout_constraintEnd_toStartOf="@id/til_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/til_address" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_address"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/half_default_margin"
                    android:hint="@string/address"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_location"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:text="@{viewModel.address.address}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_city"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/half_default_margin"
                    android:hint="@string/city"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/til_address"
                    app:layout_constraintTop_toBottomOf="@id/til_address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:text="@{viewModel.address.city}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_state"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:hint="@string/state"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toStartOf="@id/til_zip"
                    app:layout_constraintStart_toStartOf="@id/til_city"
                    app:layout_constraintTop_toBottomOf="@id/til_city">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:text="@{viewModel.address.state}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_zip"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/half_default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:hint="@string/zip"
                    app:errorEnabled="true"
                    app:layout_constraintBottom_toBottomOf="@id/address_field"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/til_state"
                    app:layout_constraintTop_toBottomOf="@id/til_city">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:text="@{viewModel.address.zipCode}" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                android:id="@+id/divider2"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginBottom="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_field" />

            <RadioGroup
                android:id="@+id/date_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2">

                <RadioButton
                    android:id="@+id/option0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.date.equals(viewModel.dateOptions[0])}"
                    android:onClick="@{() -> viewModel.setDate(viewModel.dateOptions[0])}"
                    android:text="@{viewModel.dateOptions[0]}"
                    tools:text="Thursday" />

                <RadioButton
                    android:id="@+id/option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.date.equals(viewModel.dateOptions[1])}"
                    android:onClick="@{() -> viewModel.setDate(viewModel.dateOptions[1])}"
                    android:text="@{viewModel.dateOptions[1]}"
                    tools:text="Friday" />

                <RadioButton
                    android:id="@+id/option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.date.equals(viewModel.dateOptions[2])}"
                    android:onClick="@{() -> viewModel.setDate(viewModel.dateOptions[2])}"
                    android:text="@{viewModel.dateOptions[2]}"
                    tools:text="Saturday" />

                <RadioButton
                    android:id="@+id/option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.date.equals(viewModel.dateOptions[3])}"
                    android:onClick="@{() -> viewModel.setDate(viewModel.dateOptions[3])}"
                    android:text="@{viewModel.dateOptions[3]}"
                    tools:text="Sunday" />
            </RadioGroup>

            <View
                android:id="@+id/divider"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginBottom="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_options" />

            <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.Cupcake.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@{@string/subtotal_price(viewModel.price)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="Subtotal $5.00" />

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/side_margin"
                android:onClick="@{() -> pickupFragment.cancelOrder()}"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/next_button" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:onClick="@{() -> pickupFragment.verifyAddressBeforeGotoNextScreen()}"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/subtotal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_observations_pickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintTop_toBottomOf="@id/next_button"
                tools:text="Obs: x flavor only available after 2 days" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>