<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2020 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for order summary -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SummaryFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.cupcake.model.OrderViewModel" />

        <variable
            name="summaryFragment"
            type="com.example.cupcake.ui.SummaryFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            <ImageView
                android:id="@+id/iv_no_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="32dp"
                android:importantForAccessibility="no"
                android:visibility="gone"
                tools:src="@drawable/cupcake" />

            <TextView
                android:id="@+id/tv_no_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_between_elements"
                android:text="@string/no_order"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="@color/pink_400"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/summary_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_elements"
                tools:itemCount="5"
                tools:listitem="@layout/summary_item" />

            <View
                android:id="@+id/divider1"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginBottom="@dimen/margin_between_elements" />


            <!-- Group the order details into a single ViewGroup and set focusable = true,
                 so all fields will be read aloud together by the accessibility service -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/pickup_label"
                    style="@style/Widget.Cupcake.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/pickup_date" />

                <TextView
                    android:id="@+id/date"
                    style="@style/Widget.Cupcake.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/order_summary_margin"
                    android:text="@{viewModel.date}"
                    tools:text="Sunday" />

                <TextView
                    android:id="@+id/address_label"
                    android:layout_marginTop="@dimen/order_summary_margin"
                    style="@style/Widget.Cupcake.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:text="Address:"/>
                
                <TextView
                    android:id="@+id/tv_address"
                    style="@style/Widget.Cupcake.TextView.OrderSummary"
                    android:layout_marginTop="@dimen/order_summary_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.address.toString()}"
                    android:visibility="gone"
                    tools:text="Rua Vinhosa, 408, Itaperuna - RJ, CEP: 28300-000"/>

                <View
                    android:id="@+id/divider3"
                    style="@style/Widget.Cupcake.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/margin_between_elements" />

                <TextView
                    android:id="@+id/total"
                    style="@style/Widget.Cupcake.TextView.FinalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/side_margin"
                    android:text="@{@string/total_price(viewModel.price)}"
                    tools:text="Total $5.00" />

            </LinearLayout>

            <Button
                android:id="@+id/send_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:onClick="@{() -> summaryFragment.sendOrder()}"
                android:text="@string/send" />

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:onClick="@{() -> summaryFragment.cancelOrder()}"
                android:text="@string/cancel" />

        </LinearLayout>
    </ScrollView>
</layout>